[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scheduled-reports"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "amazon-sp",
]

[tool.setuptools]
packages = ["manual", "scheduled"]
py-modules = ["connection"]

[tool.uv.sources]
amazon-sp = { git = "https://github.com/misunders2d/amazon_sp.git", rev = "master" }

[dependency-groups]
dev = [
    "ipython>=9.10.0",
]
